// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli cli error cases should error if the config is malformed 1`] = `
"Checkup configuration is malformed:
plugins expected type Array<string>, but got undefined
tasks.someTask.isEnabled expected type boolean, but got \\"foo\\""
`;

exports[`@checkup/cli normal cli output with plugins should output checkup result 1`] = `
"=== Project
name:    checkup-project
version: 0.0.0

=== Repository Information
Active days:   0 days
Age:           0 days
Total commits: 0
Total files:   0

=== Checkup Configuration
configHash: ae3266e319bdfb51db83810a2f4dd161
version:    0.0.0

"
`;

exports[`@checkup/cli normal cli output with plugins should output checkup result in JSON 1`] = `
"{
  \\"meta\\": {
    \\"project\\": {
      \\"name\\": \\"checkup-project\\",
      \\"version\\": \\"0.0.0\\",
      \\"repository\\": {
        \\"totalCommits\\": 0,
        \\"totalFiles\\": 0,
        \\"age\\": \\"0 days\\",
        \\"activeDays\\": \\"0 days\\"
      }
    },
    \\"checkup\\": {
      \\"configHash\\": \\"ae3266e319bdfb51db83810a2f4dd161\\",
      \\"version\\": \\"0.0.0\\"
    }
  },
  \\"results\\": []
}
"
`;

exports[`@checkup/cli normal cli output with plugins should run a single task if the task option is specified 1`] = `
"=== Project
name:    checkup-project
version: 0.0.0

=== Repository Information
Active days:   0 days
Age:           0 days
Total commits: 0
Total files:   0

"
`;

exports[`@checkup/cli normal cli output with plugins should use the config at the config path if provided 1`] = `
"=== Project
name:    checkup-project
version: 0.0.0

=== Repository Information
Active days:   0 days
Age:           0 days
Total commits: 0
Total files:   0

=== Checkup Configuration
configHash: ae3266e319bdfb51db83810a2f4dd161
version:    0.0.0

"
`;
